--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
     "paper-input": "PolymerElements/paper-input#~1.1.2",
     "paper-button": "PolymerElements/paper-button#~1.0.10",
-    "paper-card": "PolymerElements/paper-card#~1.0.8"
+    "paper-card": "PolymerElements/paper-card#~1.0.8",
+    "web-component-tester": "~3.4.2"
   }
 }
